-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0, Lustre 2.15.1
-
3
-
9223372036854775807
If a lot of contiguous records are skipped (>64), llog_print will stop the processing and will not display the last records.
With the https://review.whamcloud.com/45332 ("LU-15142 lctl: fixes for set_param -P and llog_print"), the following code is not true anymore:
int jt_llog_print_iter(char *logname, long start, long end, ... /* There is no "end of list" marker, record was not modified */ if (strcmp(record, logname) == 0) <------ break;
"record" could be unmodified if all processed records are skipped.
"llog_print -r" is not affected by this issue.
- is related to
-
LU-15142 LCTL: permanent parameter deletion and llog_print issues
-
- Resolved
-